Fix image alt not being visible because of height: fit-content

--- a/avtdl/ui/view/styles.css
+++ b/avtdl/ui/view/styles.css
@@ -226,6 +226,7 @@
     max-width: 400px;
     width: 100%;
     height: fit-content;
+    min-height: 2em;
     flex: 1 3 40%;
     border-radius: 4px;
     margin: 4px;
